Revert "Cu 86c73kgr2 fix for notifications and settings"
